[package]
name = "pexoxide"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
pyo3 = { version = "0.16.5", features = ["auto-initialize"] }

[target.aarch64-apple-darwin]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]
